# sample-live-launcher

./: CMakeLists.txt
.claude/skills/sample-live-launcher/: SKILL.md
Source/: AudioEngine.cpp  AudioEngine.h  ClickTrackPanel.cpp  ClickTrackPanel.h  LiveView.cpp  LiveView.h  Main.cpp  MainComponent.cpp  MainComponent.h  Models.cpp  Models.h  SequencerView.cpp  SequencerView.h  SetlistsView.cpp  SetlistsView.h  SongsView.cpp  SongsView.h  SoundBankView.cpp  SoundBankView.h  Text.h  TrackRow.cpp  TrackRow.cpp.tmp.30524.3e4956f17181  TrackRow.h  TrackRow.h.tmp.30524.c7280a0740f9
